--- a/STM32F1/Projects/STM32F1_RCC_PLL_72MHz/Objects/STM32F1_RCC_PLL_72MHz.build_log.htm
+++ b/STM32F1/Projects/STM32F1_RCC_PLL_72MHz/Objects/STM32F1_RCC_PLL_72MHz.build_log.htm
@@ -21,14 +21,16 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32\STM32F1\Projects\STM32F1_RCC_PLL_72MHz\STM32F1_RCC_PLL_72MHz.uvprojx
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F1\Projects\STM32F1_RCC_PLL_72MHz\STM32F1_RCC_PLL_72MHz.uvprojx
 Project File Date:  10/30/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14.1', folder: 'C:\User Programs\Keil\ARM\ARMCLANG\Bin'
 Build target 'STM32F1_RCC_PLL_72MHz'
+compiling main.c...
 compiling InitSWD.c...
 compiling InitRCC.c...
+compiling InitMCO.c...
 linking...
 Program Size: Code=784 RO-data=252 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
@@ -45,7 +47,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
