--- a/STM32F1/Projects/STM32F1_GPIO/Objects/STM32F1_GPIO.build_log.htm
+++ b/STM32F1/Projects/STM32F1_GPIO/Objects/STM32F1_GPIO.build_log.htm
@@ -21,12 +21,20 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32\STM32F1\Projects\STM32F1_GPIO\STM32F1_GPIO.uvprojx
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F1\Projects\STM32F1_GPIO\STM32F1_GPIO.uvprojx
 Project File Date:  10/31/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14.1', folder: 'C:\User Programs\Keil\ARM\ARMCLANG\Bin'
 Build target 'STM32F1_GPIO'
+compiling InitRCC.c...
+compiling InitSWD.c...
+compiling InitMCO.c...
+compiling InitGPIO.c...
+compiling main.c...
+linking...
+Program Size: Code=912 RO-data=252 RW-data=0 ZI-data=1632  
+FromELF: creating hex file...
 ".\Objects\STM32F1_GPIO.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -40,7 +48,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
