--- a/STM32F1/Projects/STM32F1_UART/Objects/STM32F1_UART.build_log.htm
+++ b/STM32F1/Projects/STM32F1_UART/Objects/STM32F1_UART.build_log.htm
@@ -17,20 +17,16 @@ Library Manager: ArmAr.exe V5.06 update 7 (build 960)
 Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.32.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      UL2CM3.DLL V1.163.9.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32\STM32F1\Projects\STM32F1_UART\STM32F1_UART.uvprojx
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F1\Projects\STM32F1_UART\STM32F1_UART.uvprojx
 Project File Date:  11/01/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F1_UART'
-compiling main.c...
-linking...
-Program Size: Code=7800 RO-data=268 RW-data=92 ZI-data=18324  
-FromELF: creating hex file...
 ".\Objects\STM32F1_UART.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -44,7 +40,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
