--- a/STM32F1/Projects/STM32F1_TIM/Objects/STM32F1_TIM.build_log.htm
+++ b/STM32F1/Projects/STM32F1_TIM/Objects/STM32F1_TIM.build_log.htm
@@ -21,14 +21,26 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32\STM32F1\Projects\STM32F1_TIM\STM32F1_TIM.uvprojx
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F1\Projects\STM32F1_TIM\STM32F1_TIM.uvprojx
 Project File Date:  11/01/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F1_TIM'
+compiling croutine.c...
+compiling heap_1.c...
+compiling event_groups.c...
+compiling list.c...
+compiling InitSWD.c...
+compiling InitGPIO.c...
+compiling InitRCC.c...
 compiling InitTIM.c...
 compiling main.c...
+compiling port.c...
+compiling queue.c...
+compiling timers.c...
+compiling stream_buffer.c...
+compiling tasks.c...
 linking...
 Program Size: Code=7348 RO-data=268 RW-data=92 ZI-data=18324  
 FromELF: creating hex file...
@@ -45,7 +57,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
