--- a/STM32F1/Projects/STM32F1_ADC/Objects/STM32F1_ADC.build_log.htm
+++ b/STM32F1/Projects/STM32F1_ADC/Objects/STM32F1_ADC.build_log.htm
@@ -21,13 +21,27 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32\STM32F1\Projects\STM32F1_ADC\STM32F1_ADC.uvprojx
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F1\Projects\STM32F1_ADC\STM32F1_ADC.uvprojx
 Project File Date:  11/02/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F1_ADC'
+compiling croutine.c...
+compiling event_groups.c...
+compiling heap_1.c...
+compiling InitSWD.c...
+compiling InitADC.c...
+compiling InitRCC.c...
+compiling InitGPIO.c...
+compiling list.c...
+compiling InitUART.c...
 compiling main.c...
+compiling timers.c...
+compiling port.c...
+compiling stream_buffer.c...
+compiling queue.c...
+compiling tasks.c...
 linking...
 Program Size: Code=13128 RO-data=444 RW-data=96 ZI-data=18320  
 FromELF: creating hex file...
