--- a/STM32F1/Projects/STM32F1_UART/Objects/STM32F1_UART.build_log.htm
+++ b/STM32F1/Projects/STM32F1_UART/Objects/STM32F1_UART.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  11/01/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F1_UART'
+compiling main.c...
+linking...
+Program Size: Code=7804 RO-data=268 RW-data=92 ZI-data=18324  
+FromELF: creating hex file...
 ".\Objects\STM32F1_UART.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -40,7 +44,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
