--- a/STM32F1/Projects/FreeRTOS/STM32F1_FreeRTOS_Tasks/Objects/STM32F1_FreeRTOS_Tasks.build_log.htm
+++ b/STM32F1/Projects/FreeRTOS/STM32F1_FreeRTOS_Tasks/Objects/STM32F1_FreeRTOS_Tasks.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32\STM32F1\Projects\FreeRTOS\STM32F1_FreeRTOS_Tasks\STM32F1_FreeRTOS_Tasks.uvprojx
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F1\Projects\FreeRTOS\STM32F1_FreeRTOS_Tasks\STM32F1_FreeRTOS_Tasks.uvprojx
 Project File Date:  11/01/2020
 
 <h2>Output:</h2>
@@ -44,7 +44,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
