Initial commit: STM32F1_FreeRTOS_Queues.

--- a/STM32F1/Projects/FreeRTOS/STM32F1_FreeRTOS_Queues/Objects/STM32F1_FreeRTOS_Queues.build_log.htm
+++ b/STM32F1/Projects/FreeRTOS/STM32F1_FreeRTOS_Queues/Objects/STM32F1_FreeRTOS_Queues.build_log.htm
@@ -21,12 +21,13 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32\STM32F1\Projects\FreeRTOS\STM32F1_FreeRTOS_Queues\STM32F1_FreeRTOS_Queues.uvprojx
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F1\Projects\FreeRTOS\STM32F1_FreeRTOS_Queues\STM32F1_FreeRTOS_Queues.uvprojx
 Project File Date:  11/01/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F1_FreeRTOS_Queues'
+compiling InitUART.c...
 compiling main.c...
 linking...
 Program Size: Code=7968 RO-data=268 RW-data=96 ZI-data=18320  
@@ -44,7 +45,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
