Add: SWD initialization file.

--- a/STM32F1/Projects/STM32F1_RCC_PLL_72MHz/Objects/STM32F1_RCC_PLL_72MHz.build_log.htm
+++ b/STM32F1/Projects/STM32F1_RCC_PLL_72MHz/Objects/STM32F1_RCC_PLL_72MHz.build_log.htm
@@ -22,12 +22,12 @@ Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
 D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F1\Projects\STM32F1_RCC_PLL_72MHz\STM32F1_RCC_PLL_72MHz.uvprojx
-Project File Date:  10/30/2020
+Project File Date:  11/10/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14.1', folder: 'C:\User Programs\Keil\ARM\ARMCLANG\Bin'
 Build target 'STM32F1_RCC_PLL_72MHz'
-compiling main.c...
+compiling InitRCC.c...
 linking...
 Program Size: Code=784 RO-data=252 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
