--- a/STM32F4/Projects/STM32F4_RCC_PLL_100MHz/Objects/STM32F4_RCC_PLL_100MHz.build_log.htm
+++ b/STM32F4/Projects/STM32F4_RCC_PLL_100MHz/Objects/STM32F4_RCC_PLL_100MHz.build_log.htm
@@ -27,6 +27,7 @@ Project File Date:  11/10/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F4_RCC_PLL_100MHz'
+compiling main.c...
 compiling InitRCC.c...
 linking...
 Program Size: Code=776 RO-data=424 RW-data=0 ZI-data=1632  
