--- a/STM32F0/Projects/STM32F0_UART/Objects/STM32F0_USART.build_log.htm
+++ b/STM32F0/Projects/STM32F0_UART/Objects/STM32F0_USART.build_log.htm
@@ -21,16 +21,15 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TARMCM1.DLL V1.14.3.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F0\Projects\STM32F0_USART\STM32F0_USART.uvprojx
-Project File Date:  11/02/2020
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F0\Projects\STM32F0_UART\STM32F0_UART.uvprojx
+Project File Date:  11/12/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F0_USART'
-compiling InitUSART.c...
 compiling main.c...
 linking...
-Program Size: Code=952 RO-data=196 RW-data=0 ZI-data=1632  
+Program Size: Code=1916 RO-data=196 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
 ".\Objects\STM32F0_USART.axf" - 0 Error(s), 0 Warning(s).
 
