update: RCC config file.

--- a/STM32F0/Setup files/STM32F0_SWD/Objects/STM32F0_SWD.build_log.htm
+++ b/STM32F0/Setup files/STM32F0_SWD/Objects/STM32F0_SWD.build_log.htm
@@ -9,7 +9,7 @@ License Information: Uladzislau Dubatouka, BNTU, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.32.0.0
-Toolchain Path:  C:\User Programs\Keil\ARM\ARMCC\Bin
+Toolchain Path:  D:\User Programs\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 7 (build 960)
 Assembler:       Armasm.exe V5.06 update 7 (build 960)
 Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
@@ -21,11 +21,11 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TARMCM1.DLL V1.14.3.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F0\Projects\STM32F0_SWD\STM32F0_SWD.uvprojx
-Project File Date:  11/02/2020
+D:\Documents\Workspace\STM32_Lib\STM32F0\Setup files\STM32F0_SWD\STM32F0_SWD.uvprojx
+Project File Date:  01/10/2021
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\User Programs\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F0_SWD'
 ".\Objects\STM32F0_SWD.axf" - 0 Error(s), 0 Warning(s).
 
@@ -37,7 +37,7 @@ Package Vendor: Keil
                 STMicroelectronics STM32F0 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F0xx_DFP\2.1.0\Drivers\CMSIS\Device\ST\STM32F0xx\Include
+  C:\Users\installer\AppData\Local\Arm\Packs\Keil\STM32F0xx_DFP\2.1.0\Drivers\CMSIS\Device\ST\STM32F0xx\Include
 
 <h2>Collection of Component Files used:</h2>
 Build Time Elapsed:  00:00:00
