Add: MCO output; Onle one transmission 'Hello World'.

--- a/STM32F1/Setup files/STM32F1_UART/Objects/STM32F1_UART.build_log.htm
+++ b/STM32F1/Setup files/STM32F1_UART/Objects/STM32F1_UART.build_log.htm
@@ -9,7 +9,7 @@ License Information: Uladzislau Dubatouka, BNTU, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.32.0.0
-Toolchain Path:  C:\User Programs\Keil\ARM\ARMCC\Bin
+Toolchain Path:  D:\User Programs\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 7 (build 960)
 Assembler:       Armasm.exe V5.06 update 7 (build 960)
 Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
@@ -21,15 +21,15 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F1\Projects\STM32F1_UART\STM32F1_UART.uvprojx
-Project File Date:  11/01/2020
+D:\Downloads\STM32F1_UART\STM32F1_UART.uvprojx
+Project File Date:  01/24/2021
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\User Programs\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32F1_UART'
 compiling main.c...
 linking...
-Program Size: Code=7804 RO-data=268 RW-data=92 ZI-data=18324  
+Program Size: Code=7876 RO-data=268 RW-data=92 ZI-data=18324  
 FromELF: creating hex file...
 ".\Objects\STM32F1_UART.axf" - 0 Error(s), 0 Warning(s).
 
@@ -41,7 +41,7 @@ Package Vendor: Keil
                 STMicroelectronics STM32F1 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
+  C:\Users\installer\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 Build Time Elapsed:  00:00:01
