--- a/STM32F0/Setup files/STM32F0_TIM/Objects/STM32F0_TIM.build_log.htm
+++ b/STM32F0/Setup files/STM32F0_TIM/Objects/STM32F0_TIM.build_log.htm
@@ -21,12 +21,16 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TARMCM1.DLL V1.14.3.0
  
 <h2>Project:</h2>
-D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F0\Projects\STM32F0_TIM\STM32F0_TIM.uvprojx
+D:\Documents\Workspace\Microcontrollers\STM32_Lib\STM32F0\Setup files\STM32F0_TIM\STM32F0_TIM.uvprojx
 Project File Date:  11/14/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\User Programs\Keil\ARM\ARMCC\Bin'
 Build target 'STM32F0_TIM'
+compiling InitTIM.c...
+linking...
+Program Size: Code=1188 RO-data=196 RW-data=0 ZI-data=1632  
+FromELF: creating hex file...
 ".\Objects\STM32F0_TIM.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -40,7 +44,7 @@ Package Vendor: Keil
   C:\Users\Uladzislau Dubatouka\AppData\Local\Arm\Packs\Keil\STM32F0xx_DFP\2.1.0\Drivers\CMSIS\Device\ST\STM32F0xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
